工段批次部分

--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
   },
   "dependencies": {
     "@ant-design/icons-vue": "^6.1.0",
-    "ant-design-vue": "^3.2.15",
+    "ant-design-vue": "^3.2.20",
     "axios": "^1.2.0",
     "echarts": "^5.4.3",
     "pinia": "^2.0.26",
@@ -23,8 +23,10 @@
     "@rushstack/eslint-patch": "^1.1.4",
     "@vitejs/plugin-vue": "^3.2.0",
     "@vue/eslint-config-prettier": "^7.0.0",
+    "amfe-flexible": "^2.2.1",
     "eslint": "^8.22.0",
     "eslint-plugin-vue": "^9.3.0",
+    "postcss-pxtorem": "^6.0.0",
     "prettier": "^2.7.1",
     "sass": "^1.56.1",
     "vite": "^3.2.4"
